Hot Fix - v2.1.0
- Fixed spelling issues within the english version.
- Added a custom scrollbar to the body, when it got larger than expected.
- Fixed a bug where after an entered input, and hitting enter on empty input, the site would go into an infinite loading, where the user wouldn't be able to cancel it.
- Now always notifying the UI thread whenever the search query has finished.

--- a/ROKAcademy/WebApp/Pages/Index.razor.css
+++ b/ROKAcademy/WebApp/Pages/Index.razor.css
@@ -10,22 +10,22 @@
 }
 
 /* custom scrollbar */
-::-webkit-scrollbar {
+.table-responsive::-webkit-scrollbar {
     width: .5rem;
 }
 
-::-webkit-scrollbar-track {
-    background-color: transparent;
+.table-responsive::-webkit-scrollbar-track {
+    background-color: var(--bs-gray-800);
     border-radius: .75em;
     margin: 0 30px;
 }
 
-::-webkit-scrollbar-thumb {
-    background-color: var(--bs-gray-600);
+.table-responsive::-webkit-scrollbar-thumb {
+    background-color: var(--bs-gray-700);
     border-radius: .75em;
     background-clip: content-box;
 }
 
-    ::-webkit-scrollbar-thumb:hover {
-        background-color: var(--bs-gray-300);
+    .table-responsive::-webkit-scrollbar-thumb:hover {
+        background-color: var(--bs-gray-600);
     }
