--- a/ROKAcademy/WebApp/wwwroot/css/app.css
+++ b/ROKAcademy/WebApp/wwwroot/css/app.css
@@ -11,6 +11,27 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: .5rem;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--bs-gray-800);
+    border-radius: .75em;
+    margin: 0 30px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--bs-gray-700);
+    border-radius: .75em;
+    background-clip: content-box;
+}
+
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: var(--bs-gray-600);
+    }
+
 .cover-container {
     max-width: 65em;
 }
